--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.0.5",
     "bootstrap": "4.6.0",
     "jquery": "^3.6.0",
+    "json-server": "^0.17.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
